force-app/IdPorten/objects/IdPortenCache__c/IdPortenCache__c.object-meta.xml
<CustomObject>
    <label>ID-porten Cache</label>
    <nameField>
        <label>SID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ID-porten Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>