force-app/IdPorten/objects/IdPortenCache__c/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <label>Access Token</label>
    <length>1050</length>
    <type>LongTextArea</type>
</CustomField>