force-app/IdPorten/objects/IdPortenCache__c/fields/ExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>ExpirationTime__c</fullName>
    <label>Expiration Time</label>
    <type>DateTime</type>
</CustomField>