force-app/IdPorten/objects/IdPortenCache__c/fields/Nonce__c.field-meta.xml
<CustomField>
    <fullName>Nonce__c</fullName>
    <label>Nonce</label>
    <length>128</length>
    <type>Text</type>
</CustomField>