force-app/IdPorten/objects/IdPortenCache__c/fields/RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>RefreshToken__c</fullName>
    <label>Refresh Token</label>
    <length>2050</length>
    <type>LongTextArea</type>
</CustomField>