force-app/IdPorten/objects/IdPortenCache__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>